external-crates/move/crates/move-compiler/tests/move_check/expansion/invalid_local_name.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E02010]: invalid name
  ┌─ tests/move_check/expansion/invalid_local_name.move:4:11
  │
4 │     fun t(No: u64) {
  │           ^^ Invalid parameter name 'No'. Local variable names must start with 'a'..'z', '_', or be a valid name quoted with backticks (`name`)

error[E03005]: unbound unscoped name
  ┌─ tests/move_check/expansion/invalid_local_name.move:5:9
  │
5 │         No;
  │         ^^ Unbound constant 'No'

error[E02010]: invalid name
  ┌─ tests/move_check/expansion/invalid_local_name.move:9:13
  │
9 │         let No;
  │             ^^ Invalid local name 'No'. Local variable names must start with 'a'..'z', '_', or be a valid name quoted with backticks (`name`)

error[E02010]: invalid name
   ┌─ tests/move_check/expansion/invalid_local_name.move:14:13
   │
14 │         let No = 100;
   │             ^^ Invalid local name 'No'. Local variable names must start with 'a'..'z', '_', or be a valid name quoted with backticks (`name`)

error[E03005]: unbound unscoped name
   ┌─ tests/move_check/expansion/invalid_local_name.move:15:13
   │
15 │         F { No };
   │             ^^ Unbound constant 'No'

warning[W09002]: unused variable
   ┌─ tests/move_check/expansion/invalid_local_name.move:23:13
   │
23 │         let vector;
   │             ^^^^^^ Unused local variable 'vector'. Consider removing or prefixing with an underscore: '_vector'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/invalid_local_name.move:23:13
   │
23 │         let vector;
   │             ^^^^^^ Invalid variable name 'vector'. 'vector' is restricted and cannot be used to name a variable
